[package]
name = "quantumcompdecomp"
version = "0.1.0"
authors = ["Marmik Mewada mewadamarmik@gmail.com"]
edition = "2021"
description = "A file compression tool for YouTube videos."
repository = "https://github.com/marmikmewada/quantumcompdecomp"
license = "MIT"

[profile.release]
lto = true  

[dependencies]
eframe = "0.17"  # GUI framework
egui = "0.17"    # GUI library
flate2 = "1.0"   # Compression library
rfd = "0.11"     # File dialog library
winapi = { version = "0.3", features = ["winuser", "wingdi"] }  # Windows API

[features]
default = []  # Define any default features if necessary
